Added chubby wieners

--- a/foodtruckfinderapp/src/main/resources/trucks.yaml
+++ b/foodtruckfinderapp/src/main/resources/trucks.yaml
@@ -600,5 +600,12 @@ categories: Food
 facebook: /PecanandCharlies
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1642068394/blondmonkey_normal.JPG
 twittalyzer: "on"
+---
+id: chubbyweiners
+twitter: chubbyweiners
+name: Chubby Weiners
+categories: Food
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1629862898/image_normal.jpg
+twittalyzer: "on"
 
 
