--- a/foodtruckfinderapp/src/main/resources/trucks.yaml
+++ b/foodtruckfinderapp/src/main/resources/trucks.yaml
@@ -93,7 +93,7 @@ url: http://www.flirtycupcakes.com/
 iconUrl: http://si0.twimg.com/profile_images/720492263/small_logo_normal.jpg
 foursquare: 4b990b1cf964a520975d35e3
 facebook: /flirtycupcakes
-twittalyzer: "on"
+twittalyzer: "off"
 ---
 id: taquerofusion
 twitter: taquerofusion
@@ -283,6 +283,16 @@ url: http://www.cupcakesforcourage.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1268075878/twitter_logo_normal.jpg
 foursquare: 4dd6cc877d8b322663e0276c
 twittalyzer: "on"
+facebook: /cupcakesforcourage
+---
+id: courageouscakes2
+twitter: courageouscakes
+name: Cupcakes for Courage
+categories: Dessert
+url: http://www.cupcakesforcourage.com
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1268075878/twitter_logo_normal.jpg
+foursquare: 4dd6cc877d8b322663e0276c
+twittalyzer: "off"
 facebook: /cupcakesforcourage
 ---
 id: jerkinonwheels
@@ -606,6 +616,13 @@ twitter: chubbyweiners
 name: Chubby Weiners
 categories: Food
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1629862898/image_normal.jpg
+twittalyzer: "on"
+---
+id: jbalbertospizza
+twitter: jbalbertospizza
+name: Albertos Pizza
+categories: Food
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1670247225/camera_phone_2_1067_normal.jpg
 twittalyzer: "on"
 
 
