Added Alexander Beetle

--- a/foodtruckfinderapp/src/main/resources/trucks.yaml
+++ b/foodtruckfinderapp/src/main/resources/trucks.yaml
@@ -624,5 +624,12 @@ name: Albertos Pizza
 categories: Food
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1670247225/camera_phone_2_1067_normal.jpg
 twittalyzer: "on"
+---
+id: alexbeebakeshop
+twitter: alexbeebakeshop
+name: Alexander Beetle
+categories: Food
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1413372809/image_normal.jpg
+twittalyzer: "on"
 
 
