Added Get Curried Away

--- a/foodtruckfinderapp/src/main/resources/trucks.yaml
+++ b/foodtruckfinderapp/src/main/resources/trucks.yaml
@@ -639,5 +639,13 @@ categories: Food
 url: http://www.currycruiser.com/
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1629237144/Screen_Shot_2011-11-08_at_1.25.31_PM_normal.png
 twittalyzer: "on"
+---
+id: getcurriedaway
+twitter: getcurriedaway
+name: Curried
+categories: Indian Food
+url: http://www.curried.com
+iconUrl: https://twimg0-a.akamaihd.net/profile_images/1330464121/Curried_normal.png
+twittalyzer: "on"
 
 
