--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -646,7 +646,7 @@ name: Curried
 categories: Indian Food
 url: http://www.curried.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1330464121/Curried_normal.png
-twittalyzer: "on"
+twittalyzer: "off"
 ---
 id: gettapolpetta
 twitter: gettapolpetta
