--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -654,5 +654,11 @@ name: Getta Polpetta Truck
 categories: Food
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1675541664/twitter-logo_normal.jpg
 twittalyzer: "on"
-
-
+---
+id: phbakery
+twitter: phbakery
+name: Pleasant House Bakery
+categories: Savory
+url: http://pleasanthousebakery.com/
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1670357503/pie_truck_normal.jpg
+twittalyzer: "on"
