--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -662,3 +662,11 @@ categories: Savory
 url: http://pleasanthousebakery.com/
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1670357503/pie_truck_normal.jpg
 twittalyzer: "on"
+---
+id: giaviasweets
+twitter: giaviasweets
+name: Gia Via Sweets
+categories: Sweet
+url: http://www.giaviasweets.com/
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1558342471/GiaVia_Sweets_normal.png
+twittalyzer: "on"
