Updated mojo express' logo and fixed spelling of 'chubby wieners'

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -549,7 +549,7 @@ id: mjexpress14
 twitter: mjexpress14
 name: Mojo Express
 categories: Coffee
-iconUrl: http://twimg0-a.akamaihd.net/sticky/default_profile_images/default_profile_5_normal.png
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1738009047/stock-illustration-15652507-coffee-sign_normal.jpg
 twittalyzer: "on"
 ---
 id: papostacos
@@ -611,9 +611,9 @@ facebook: /PecanandCharlies
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1642068394/blondmonkey_normal.JPG
 twittalyzer: "on"
 ---
-id: chubbyweiners
-twitter: chubbyweiners
-name: Chubby Weiners
+id: chubbywieners
+twitter: chubbywieners
+name: Chubby Wieners
 categories: Food
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1629862898/image_normal.jpg
 twittalyzer: "on"
