--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -687,3 +687,10 @@ categories: Breakfast,Coffee,Lunch
 url: http://www.eleavenfood.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/580743327/images_normal.jpg
 twittalyzer: "on"
+---
+id: enemykitchen
+twitter: enemykitchen
+name: Enemy Kitchen
+categories: Savory
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1813925574/Rakowitz_Sketch_sq_normal.jpg
+twittalyzer: "on"
