--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -369,6 +369,7 @@ url: http://www.flirtycupcakes.com/
 iconUrl: http://si0.twimg.com/profile_images/720492263/small_logo_normal.jpg
 foursquare: 4b990b1cf964a520975d35e3
 facebook: /flirtycupcakes
+inactive: true
 ---
 id: mobilefoodunit
 twitter: mobilefoodunit
