--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -778,3 +778,11 @@ categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1879823043/pancakes_tall_normal.jpg
 twittalyzer: "on"
 inactive: true
+---
+id: soupsintheloop
+twitter: soupsintheloop
+name: Soups in the Loop
+categories: Savory
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1677356529/SL_Logo-RY_twitter2_6DEC11_normal.jpg
+twittalyzer: "on"
+inactive: true
