--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>Food Truck Locator</name>
-  <url>http://chicagofoodtrucklocator.appspot.com</url>
+  <url>http://www.chicagofoodtruckfinder.com</url>
   <repositories>
     <repository>
       <id>geocoder-java</id>
@@ -51,13 +51,13 @@
     <dependency>
       <groupId>com.google</groupId>
       <artifactId>appengine-local-runtime-shared</artifactId>
-      <version>1.6.0</version>
+      <version>1.6.6</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.google</groupId>
       <artifactId>appengine-api-1.0-sdk</artifactId>
-      <version>1.6.0</version>
+      <version>1.6.6</version>
     </dependency>
     <!-- installed these manually from the google gdata java client -->
     <dependency>
