Fixed a spelling error with stop n go truck

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -813,8 +813,8 @@ iconUrl: http://twimg0-a.akamaihd.net/profile_images/2141136426/logo_headonly_cr
 twittalyzer: "on"
 inactive: true
 ---
-id: stopngo
-twitter: stopngo
+id: stopngochicago
+twitter: stopngochicago
 name: Stop n Go
 categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/sticky/default_profile_images/default_profile_1_normal.png
