--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -836,3 +836,12 @@ categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/2171692406/Logo_Final_normal.jpg
 twittalyzer: "on"
 inactive: true
+---
+id: big_fat_tuesday
+twitter: big_fat_tuesday
+name: Big Fat Tuesday
+categories: Savory
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/2243553927/FB_logo_normal.jpg
+twittalyzer: "on"
+inactive: false
+
