--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -844,4 +844,20 @@ categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/2243553927/FB_logo_normal.jpg
 twittalyzer: "on"
 inactive: false
+---
+id: beyondborders4
+twitter: beyondborders4
+name: Beyond Borders
+categories: Savory
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/2187566920/Beyond-Borders-logo1-for-Twit2_normal.gif
+twittalyzer: "on"
+inactive: false
+---
+id: cheeseforce
+twitter: cheeseforce
+name: Cheese Force
+categories: Savory
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1520492524/mushroom_normal.jpg
+twittalyzer: "on"
+inactive: false
 
