--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,11 @@
       <artifactId>jersey-client</artifactId>
       <version>1.6</version>
     </dependency>
+    <dependency>
+      <groupId>net.sf.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>2.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
