--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,10 @@
     <error-code>500</error-code>
     <location>/500.html</location>
   </error-page>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/404.html</location>
+  </error-page>
   <listener>
     <listener-class>foodtruck.server.FoodtruckConfig</listener-class>
   </listener>
