--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
     </repository>
   </repositories>
   <dependencies>
+<dependency>
+<groupId>org.apache.bsf</groupId>
+<artifactId>bsf-all</artifactId>
+<version>3.0-beta3</version>
+  <scope>runtime</scope>
+</dependency>
     <!-- older version required by appengine -->
     <dependency>
       <groupId>com.sun.xml.bind</groupId>
