--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
       <artifactId>appengine-api-1.0-sdk</artifactId>
       <version>1.6.6</version>
     </dependency>
+    <dependency>
+      <groupId>com.javadocmd</groupId>
+      <artifactId>simplelatlng</artifactId>
+      <version>RELEASE</version>
+    </dependency>
+
     <!-- installed these manually from the google gdata java client -->
     <dependency>
       <groupId>com.google.gdata</groupId>
@@ -188,6 +194,11 @@
       <groupId>net.sf.opencsv</groupId>
       <artifactId>opencsv</artifactId>
       <version>2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>antlr</groupId>
+      <artifactId>antlr</artifactId>
+      <version>2.7.7</version>
     </dependency>
   </dependencies>
   <build>
