--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
     <dependency>
       <groupId>com.javadocmd</groupId>
       <artifactId>simplelatlng</artifactId>
-      <version>RELEASE</version>
+      <version>1.1.0</version>
     </dependency>
 
     <!-- installed these manually from the google gdata java client -->
