--- a/pom.xml
+++ b/pom.xml
@@ -120,9 +120,9 @@
       <version>16.0.1</version>
     </dependency>
     <dependency>
-      <groupId>com.google.code.guice</groupId>
+      <groupId>com.google.inject</groupId>
       <artifactId>guice</artifactId>
-      <version>2.0.1</version>
+      <version>3.0</version>
     </dependency>
     <dependency>
       <groupId>aopalliance</groupId>
@@ -130,19 +130,9 @@
       <version>1.0</version>
     </dependency>
     <dependency>
-      <groupId>com.google.code.guice</groupId>
+      <groupId>com.google.inject.extensions</groupId>
       <artifactId>guice-servlet</artifactId>
-      <version>2.0.1</version>
-      <exclusions>
-        <exclusion>
-          <groupId>com.google.code.guice</groupId>
-          <artifactId>guice-servlet</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.google.inject</groupId>
-          <artifactId>guice</artifactId>
-        </exclusion>
-      </exclusions>
+      <version>3.0</version>
     </dependency>
     <dependency>
       <groupId>org.easymock</groupId>
