--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>com.google.appengine.tools</groupId>
+      <artifactId>appengine-gcs-client</artifactId>
+      <version>0.4.3</version>
+    </dependency>
+    <dependency>
       <groupId>com.google</groupId>
       <artifactId>appengine-api-1.0-sdk</artifactId>
       <version>1.8.0</version>
