--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
       <version>1.9.24</version>
     </dependency>
     <dependency>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <version>0.28</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>com.javadocmd</groupId>
       <artifactId>simplelatlng</artifactId>
       <version>1.1.0</version>
