--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,17 @@
       <version>1.7R1</version>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>com.amazon.alexa</groupId>
+      <artifactId>alexa-skills-kit</artifactId>
+      <version>1.1.2</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.jaxrs</groupId>
+      <artifactId>jackson-jaxrs-json-provider</artifactId>
+      <version>2.7.4</version>
+    </dependency>
 
     <!-- older version required by appengine -->
     <dependency>
