Fix wiring issues with alexa servlet (part deux)

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.3.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.directory.studio</groupId>
+      <artifactId>org.apache.commons.io</artifactId>
+      <version>2.4</version>
+    </dependency>
 
     <!-- older version required by appengine -->
     <dependency>
