--- a/ftf/config-api/pom.xml
+++ b/ftf/config-api/pom.xml
@@ -44,6 +44,13 @@
       <artifactId>common-api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+      <version>4.0</version>
+    </dependency>
+
   </dependencies>
 
 
