--- a/main/pom.xml
+++ b/main/pom.xml
@@ -96,6 +96,12 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
 
+    <dependency>
+      <groupId>foodtruck</groupId>
+      <artifactId>config-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
 
     <!-- older version required by appengine -->
     <dependency>
