--- a/ftf/core-services/pom.xml
+++ b/ftf/core-services/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>foodtruck</groupId>
-  <artifactId>geolocation</artifactId>
+  <artifactId>core-services</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
@@ -44,26 +44,20 @@
       <artifactId>jersey-client</artifactId>
       <version>1.6</version>
     </dependency>
-
     <dependency>
       <groupId>foodtruck</groupId>
       <artifactId>common-api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
-
     <dependency>
       <groupId>foodtruck</groupId>
       <artifactId>config-api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
-
     <dependency>
       <groupId>com.google.inject</groupId>
       <artifactId>guice</artifactId>
       <version>4.0</version>
     </dependency>
-
   </dependencies>
-
-
 </project>
