--- a/main/pom.xml
+++ b/main/pom.xml
@@ -104,7 +104,7 @@
 
     <dependency>
       <groupId>foodtruck</groupId>
-      <artifactId>geolocation</artifactId>
+      <artifactId>core-services</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
 
