--- a/ftf/core-services/pom.xml
+++ b/ftf/core-services/pom.xml
@@ -59,5 +59,15 @@
       <artifactId>guice</artifactId>
       <version>4.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.inject.extensions</groupId>
+      <artifactId>guice-multibindings</artifactId>
+      <version>3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.twitter4j</groupId>
+      <artifactId>twitter4j-core</artifactId>
+      <version>3.0.6</version>
+    </dependency>
   </dependencies>
 </project>
