--- a/ftf/common-api/pom.xml
+++ b/ftf/common-api/pom.xml
@@ -46,5 +46,10 @@
       <artifactId>guice</artifactId>
       <version>4.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.inject.extensions</groupId>
+      <artifactId>guice-servlet</artifactId>
+      <version>3.0</version>
+    </dependency>
   </dependencies>
 </project>
