--- a/ftf/core-services/pom.xml
+++ b/ftf/core-services/pom.xml
@@ -54,6 +54,7 @@
       <artifactId>config-api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    <!-- guice stuff -->
     <dependency>
       <groupId>com.google.inject</groupId>
       <artifactId>guice</artifactId>
@@ -64,6 +65,7 @@
       <artifactId>guice-multibindings</artifactId>
       <version>3.0</version>
     </dependency>
+    <!-- twitter stuff -->
     <dependency>
       <groupId>org.twitter4j</groupId>
       <artifactId>twitter4j-core</artifactId>
