--- a/ftf/core-services/pom.xml
+++ b/ftf/core-services/pom.xml
@@ -71,5 +71,19 @@
       <artifactId>twitter4j-core</artifactId>
       <version>3.0.6</version>
     </dependency>
+    <!-- test stuff -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.5</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <version>0.28</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
