--- a/ftf/core-services/pom.xml
+++ b/ftf/core-services/pom.xml
@@ -11,6 +11,7 @@
   <properties>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
   </properties>
 
   <dependencies>
@@ -65,6 +66,13 @@
       <artifactId>guice-multibindings</artifactId>
       <version>3.0</version>
     </dependency>
+    <!-- mail stuff -->
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.4</version>
+    </dependency>
+
     <!-- twitter stuff -->
     <dependency>
       <groupId>org.twitter4j</groupId>
