--- a/ftf/core-services/pom.xml
+++ b/ftf/core-services/pom.xml
@@ -55,6 +55,20 @@
       <artifactId>config-api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-calendar</artifactId>
+      <version>v3-rev105-1.19.0</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava-jdk5</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+
     <!-- guice stuff -->
     <dependency>
       <groupId>com.google.inject</groupId>
