--- a/ftf/config-api/pom.xml
+++ b/ftf/config-api/pom.xml
@@ -51,6 +51,13 @@
       <version>4.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>2.8.5</version>
+    </dependency>
+
+
   </dependencies>
 
 
