--- a/ftf/pom.xml
+++ b/ftf/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>foodtruck</groupId>
   <version>1.0-SNAPSHOT</version>
@@ -11,4 +13,18 @@
     <module>config-api</module>
     <module>core-services</module>
   </modules>
+
+  <profiles>
+    <profile>
+      <id>jdk-1-8</id>
+      <activation>
+        <jdk>1.8</jdk>
+      </activation>
+      <modules>
+        <module>web-services</module>
+        <module>confighub</module>
+        <module>foodtruckfinder</module>
+      </modules>
+    </profile>
+  </profiles>
 </project>
