--- a/ftf/confighub/pom.xml
+++ b/ftf/confighub/pom.xml
@@ -28,7 +28,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>19.0</version>
+      <version>20.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
@@ -52,7 +52,11 @@
       <version>1.0-SNAPSHOT</version>
       <scope>runtime</scope>
     </dependency>
-
+    <dependency>
+      <groupId>foodtruck</groupId>
+      <artifactId>gcloud-services</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
@@ -93,6 +97,7 @@
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
         <version>${jetty.maven.plugin}</version>
+        <port>8080</port>
       </plugin>
 
       <plugin>
