--- a/ftf/pom.xml
+++ b/ftf/pom.xml
@@ -22,6 +22,7 @@
       </activation>
       <modules>
         <module>web-services</module>
+	<module>gcloud-services</module>
         <module>confighub</module>
         <module>foodtruckfinder</module>
       </modules>
