--- a/ftf/confighub/pom.xml
+++ b/ftf/confighub/pom.xml
@@ -97,7 +97,11 @@
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
         <version>${jetty.maven.plugin}</version>
-        <port>8080</port>
+        <configuration>
+          <httpConnector>
+            <port>8081</port>
+          </httpConnector>
+        </configuration>
       </plugin>
 
       <plugin>
