--- a/ftf/common-api/pom.xml
+++ b/ftf/common-api/pom.xml
@@ -46,20 +46,15 @@
       <artifactId>guice</artifactId>
       <version>4.0</version>
     </dependency>
+    <!-- needed for request scoped stuff in session class -->
     <dependency>
       <groupId>com.google.inject.extensions</groupId>
       <artifactId>guice-servlet</artifactId>
       <version>3.0</version>
     </dependency>
-
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>2.8.5</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.jaxrs</groupId>
-      <artifactId>jackson-jaxrs-json-provider</artifactId>
       <version>2.8.5</version>
     </dependency>
     <dependency>
@@ -77,7 +72,5 @@
       <artifactId>jackson-datatype-joda</artifactId>
       <version>2.8.5</version>
     </dependency>
-
-
   </dependencies>
 </project>
