--- a/ftf/config-api/pom.xml
+++ b/ftf/config-api/pom.xml
@@ -57,8 +57,19 @@
       <version>2.8.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <version>0.28</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.guava/guava-testlib -->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava-testlib</artifactId>
+      <version>20.0</version>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
-
-
 </project>
