--- a/ftf/common-api/pom.xml
+++ b/ftf/common-api/pom.xml
@@ -72,6 +72,14 @@
       <artifactId>jackson-datatype-joda</artifactId>
       <version>2.8.5</version>
     </dependency>
+    <!-- testing -->
+    <dependency>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <version>0.28</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
   <build>
     <plugins>
