--- a/main/pom.xml
+++ b/main/pom.xml
@@ -280,6 +280,13 @@
       <artifactId>antlr</artifactId>
       <version>2.7.7</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.8.3</version>
+    </dependency>
+
     <!-- Code needed for google apis V3 -->
     <dependency>
       <groupId>com.google.oauth-client</groupId>
