--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ foodtrucklocator.*
 output
 npm-debug.log
 src/main/resources
-
+package-lock.json
+node_modules
 
 
 src/main/webapp/WEB-INF/appengine-web.xml
