--- a/main/pom.xml
+++ b/main/pom.xml
@@ -41,13 +41,12 @@
       <version>3.0-beta3</version>
       <scope>runtime</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mozilla/rhino -->
     <dependency>
-      <groupId>rhino</groupId>
-      <artifactId>js</artifactId>
-      <version>1.7R1</version>
-      <scope>runtime</scope>
+      <groupId>org.mozilla</groupId>
+      <artifactId>rhino</artifactId>
+      <version>1.7.11</version>
     </dependency>
-
     <!-- needed by alexa -->
     <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
     <dependency>
