Added appengine maven plugin

--- a/main/pom.xml
+++ b/main/pom.xml
@@ -382,6 +382,11 @@
         <version>2.0</version>
       </plugin>
       <plugin>
+        <groupId>com.google.appengine</groupId>
+        <artifactId>appengine-maven-plugin</artifactId>
+        <version>1.9.76</version>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
         <version>2.4</version>
