--- a/main/pom.xml
+++ b/main/pom.xml
@@ -129,7 +129,11 @@
       <artifactId>google-cloud-monitoring</artifactId>
       <version>1.48.0</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-kms</artifactId>
+      <version>1.20.0</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/com.google.truth.extensions/truth-java8-extension -->
     <dependency>
       <groupId>com.google.truth.extensions</groupId>
