More library upgrades

--- a/main/pom.xml
+++ b/main/pom.xml
@@ -229,10 +229,11 @@
       <version>3.0</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.guava/guava-testlib -->
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava-testlib</artifactId>
-      <version>20.0</version>
+      <version>29.0-jre</version>
       <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
