--- a/main/pom.xml
+++ b/main/pom.xml
@@ -169,13 +169,12 @@
       <version>1.2</version>
       <scope>compile</scope>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
-      <version>1.3</version>
+      <version>[1.3.3,)</version>
     </dependency>
-
+    
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
